# fastmd

./: .gitignore  Cargo.toml  README.md
Docs/: Architecture_Notes.md  Layer_1_Blueprint.md  Release_Checklist.md  Stage2_Blueprint.md  Support_Matrix.md  todos_20260406.md  todos_20260407.md  todos_20260408.md  todos_20260409.md
Docs/Notes/: README.md
Scripts/: generate_xcodeproj.rb  run_local_checks.sh  run_manual_smoke.sh
Sources/FastMD/: MarkdownRenderer.swift  PreviewPanelController.swift
Tests/FastMDTests/: FastMDTests.swift
apps/desktop-tauri/: README.md
apps/desktop-tauri/src-tauri/: Cargo.toml
apps/desktop-tauri/src-tauri/src/: main.rs
apps/macos/: Package.swift  README.md
apps/macos/FastMD.xcodeproj/: project.pbxproj
apps/macos/FastMD.xcodeproj/xcshareddata/xcschemes/: FastMD.xcscheme
apps/macos/Sources/FastMD/: AccessibilityPermissionManager.swift  AppDelegate.swift  FastMDApp.swift  FinderHoverCoordinator.swift  FinderItemResolver.swift  FinderSelectionResolver.swift  HoverMonitorService.swift  PreferencesStore.swift  PreviewPanelController.swift  RuntimeLogger.swift  SpaceKeyMonitor.swift  VendorAssetLoader.swift
apps/macos/Tests/FastMDTests/: FastMDTests.swift
crates/: README.md
crates/fastmd-contracts/: Cargo.toml  README.md
crates/fastmd-contracts/src/: lib.rs
crates/fastmd-core/: Cargo.toml  README.md
crates/fastmd-core/src/: lib.rs
crates/fastmd-platform/: Cargo.toml  README.md
crates/fastmd-platform-linux-nautilus/: Cargo.toml  README.md
crates/fastmd-platform-linux-nautilus/docs/: ubuntu-parity-validation.md
crates/fastmd-platform-linux-nautilus/src/: adapter.rs  diagnostics.rs  filter.rs  hover.rs  lib.rs  live_probes.rs  probes.rs  validation.rs
crates/fastmd-platform-macos/: Cargo.toml  README.md
crates/fastmd-platform-macos/src/: lib.rs
crates/fastmd-platform-windows/: Cargo.toml  README.md  VALIDATION.md
crates/fastmd-platform-windows/src/: adapter.rs  evidence.rs  filter.rs  frontmost.rs  hover.rs  lib.rs  parity.rs  preview.rs  validation.rs
crates/fastmd-platform/src/: lib.rs
crates/fastmd-render/: Cargo.toml  README.md
crates/fastmd-render/src/: lib.rs
ui/: README.md  package-lock.json
ui/src/: app.test.ts  app.ts  bridge.test.ts  bridge.ts  fixtures.ts  markdown.ts  shims.d.ts  styles.css  types.ts
