[package]
name = "fastmd-platform-linux-nautilus"
version = "0.1.0"
edition = "2021"
description = "FastMD Stage 2 Ubuntu 24.04 GNOME Files / Nautilus adapter seams"
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
fastmd-contracts = { path = "../fastmd-contracts" }
fastmd-core = { path = "../fastmd-core" }
fastmd-render = { path = "../fastmd-render" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
