[package]
name = "fastmd-platform-windows"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Windows 11 + Explorer adapter seams for FastMD Stage 2"

[lib]
path = "src/lib.rs"

[dependencies]
fastmd-contracts = { path = "../fastmd-contracts" }
fastmd-core = { path = "../fastmd-core" }
fastmd-render = { path = "../fastmd-render" }
serde.workspace = true
serde_json.workspace = true
