[package]
name = "fastmd-desktop-tauri"
version = "0.1.0"
edition = "2021"
description = "FastMD Stage 2 Tauri desktop shell"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
fastmd-render = { path = "../../../crates/fastmd-render" }
fastmd-platform-linux-nautilus = { path = "../../../crates/fastmd-platform-linux-nautilus" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3" }
tauri-plugin-global-shortcut = "2.3.1"
